--- a/MeltyInstaller/MainWindow.xaml
+++ b/MeltyInstaller/MainWindow.xaml
@@ -12,10 +12,11 @@
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
 
-        <Image x:Name="image" HorizontalAlignment="Left" VerticalAlignment="Bottom" Source="/necobox.png"/>
+        <Image x:Name="image" HorizontalAlignment="Left" VerticalAlignment="Bottom" Source="/necobox.png" Margin="10,0,0,20"/>
 
         <Grid Grid.Column="1" Margin="40,40,40,40">
             <Grid.RowDefinitions>
+                <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
@@ -45,14 +46,14 @@
             <CheckBox x:Name="installCCCaster" Content="Install CCCaster (Rollback netcode netplay)" Grid.Row="3" VerticalAlignment="Center" />
             <CheckBox x:Name="installConcerto" Content="Install Concerto (GUI and lobby system for CCCaster)" Grid.Row="4" VerticalAlignment="Center" Click="installConcerto_Click" />
 
-            <Border BorderThickness="0.5" BorderBrush="Black" Padding="2,2,2,2" Grid.Row="6" Grid.RowSpan="4">
+            <Border BorderThickness="0.5" BorderBrush="Black" Padding="2,2,2,2" Grid.Row="7" Grid.RowSpan="4">
                 <ScrollViewer x:Name="scrollLog" VerticalScrollBarVisibility="Auto">
                     <TextBlock x:Name="installLog" />
                 </ScrollViewer>
             </Border>
 
-            <ProgressBar x:Name="progressBar" Grid.Row="10" Height="20" />
-            <Button x:Name="install" Content="Install" Grid.Row="11" Height="25" Width="80" HorizontalAlignment="Right" Click="install_Click" />
+            <ProgressBar x:Name="progressBar" Grid.Row="11" Height="20" />
+            <Button x:Name="install" Content="Install" Grid.Row="12" Height="25" Width="80" HorizontalAlignment="Right" Click="install_Click" />
 
         </Grid>
     </Grid>
