--- a/MeltyInstaller/MainWindow.xaml
+++ b/MeltyInstaller/MainWindow.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:local="clr-namespace:MeltyInstaller" mc:Ignorable="d" Title="MBAACC Community Edition Installer" Height="450" Width="650" ResizeMode="NoResize">
+    xmlns:local="clr-namespace:MeltyInstaller" mc:Ignorable="d" Title="MBAACC Community Edition Installer" Height="450" Width="650" ResizeMode="NoResize" Icon="/necobox.ico">
     
     
     <Grid>
