--- a/MeltyInstaller/MainWindow.xaml
+++ b/MeltyInstaller/MainWindow.xaml
@@ -4,8 +4,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:MeltyInstaller" mc:Ignorable="d" Title="MBAACC Community Edition Installer" Height="450" Width="650" ResizeMode="NoResize" Icon="/necobox.ico">
-    
-    
+
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -44,8 +44,9 @@
             </Grid>
 
             <CheckBox x:Name="installCCCaster" Content="Install CCCaster (Rollback netcode netplay)" Grid.Row="3" VerticalAlignment="Center" />
-            <CheckBox x:Name="installConcerto" Content="Install Concerto (GUI and lobby system for CCCaster)" Grid.Row="4" VerticalAlignment="Center" Click="installConcerto_Click" />
-
+            <CheckBox x:Name="installConcerto" Content="Install Concerto (GUI and lobby system for CCCaster)" Grid.Row="4" VerticalAlignment="Center"/>
+            <CheckBox x:Name="CreateShortcuts" Content="Create shortcuts on Desktop" Grid.Row="5" VerticalAlignment="Center"/>
+            
             <Border BorderThickness="0.5" BorderBrush="Black" Padding="2,2,2,2" Grid.Row="7" Grid.RowSpan="4">
                 <ScrollViewer x:Name="scrollLog" VerticalScrollBarVisibility="Auto">
                     <TextBox x:Name="installLog" Background="Transparent" BorderThickness="0" IsReadOnly="True" TextWrapping="Wrap" />
